split regularization into multiple PBS jobs
Also condensed autoencoder regularizing into a class

--- a/Python/.project
+++ b/Python/.project
@@ -3,6 +3,7 @@
 	<name>ReactivityMachineLearning</name>
 	<comment></comment>
 	<projects>
+		<project>BranchingPlaneScripts</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
